GENISSUES-403: Changes BioSourceUpdater to have only scientific name in the full name. This field will be the one used for the mutation reporter (lowercase and underscored) to retrieve the ensembl spices name. Creates new script and profile for the execution.