@@ -10,6 +10,46 @@
     <artifactId>intact-biosource-update</artifactId>
     <name>IntAct Database Update :: BioSource Update</name>
 
+    <properties>
+        <db.url>${db.protocol}:${db.subprotocol}${db.separator}${db.alias}</db.url>
+    </properties>
+
+    <profiles>
+        <profile>
+            <id>biosource-update</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-Xms256m</argument>
+                                <argument>-Xmx24288m</argument>
+                                <argument>-XX:+UseConcMarkSweepGC</argument>
+
+                                <argument>-classpath</argument>
+                                <classpath />
+                                <argument>uk.ac.ebi.intact.util.biosource.BioSourceUpdater</argument>
+                                <!-- database to update -->
+                                <argument>${database}</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
